@@ -97,16 +97,15 @@ int	execute_action(DB_ALERT *alert, DB_MEDIATYPE *mediatype, char *error, int ma
 
 		if (0 == access(cmd, X_OK))
 		{
-			send_to = zbx_dyn_escape_string(alert->sendto, "\"\\");
-			subject = zbx_dyn_escape_string(alert->subject, "\"\\");
-			message = zbx_dyn_escape_string(alert->message, "\"\\");
+			send_to = zbx_dyn_escape_shell_single_quote(alert->sendto);
+			subject = zbx_dyn_escape_shell_single_quote(alert->subject);
+			message = zbx_dyn_escape_shell_single_quote(alert->message);
 
-			zbx_snprintf_alloc(&cmd, &cmd_alloc, &cmd_offset, " \"%s\" \"%s\" \"%s\"",
-					send_to, subject, message);
+			zbx_snprintf_alloc(&cmd, &cmd_alloc, &cmd_offset, " '%s' '%s' '%s'", send_to, subject, message);
 
-			zbx_free(send_to);
-			zbx_free(subject);
 			zbx_free(message);
+			zbx_free(subject);
+			zbx_free(send_to);
 
 			if (SUCCEED == (res = zbx_execute(cmd, &output, error, max_error_len, ALARM_ACTION_TIMEOUT)))
 			{
